tests/NormalTests/paczka1/small_fuzzy/20229580.err
Error in line 1: CUOdYF6qI2 A985 22,9
Error in line 5: S584 A41 89,4
Error in line 12: KHmo7 S584 90,29
